2002-12-29  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>
        * as/mcs51/Makefile.bcc: fixed typo lkomf51.o -> lkaomf51.o

2002-12-28  Bernhard Held <bernhard@bernhardheld.de>
	* src/mcs51/peeph.def: added rules 234 and 235 from Frieder Ferlemann <frieder.ferlemann@web.de>
	* support/regression/tests/bug-524697.c: fit mem usage into 8032

2002-12-28  Bernhard Held <bernhard@bernhardheld.de>
	* src/mcs51/gen.c (aopGetUsesAcc): inserted missing "return FALSE"

2002-12-27  Bernhard Held <bernhard@bernhardheld.de>
        * as/mcs51/Makefile.in: fixed typo lkomf51.o -> lkaomf51.o

2002-12-26  Bernhard Held <bernhard@bernhardheld.de>
	* src/mcs51/main.c: removed {bindir}{sep} from aslink

2002-12-10  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    * in \sdcc\as\mcs51\ changed these files in order to create an
    aomf51 file: aslink.h, lkdta.c, lklex.c, lklibr.c, lklist.c,
    lkmain.c.  Also added: lkmem.c and lkaomf51.c.  Changed the 
    following files to include the previous two files: aslink.dsp,
    Makefile.aslink, Makefile.bcc, and Makefile.in.

    * Changed \sdcc\src\SDCCmain.c so it creates files with extension
    .adb instead of .cdb
    
2002-11-09  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* \sdcc\as\mcs51\lklist.c: Now reports memory usage using the
	value from option --iram-size.

2002-09-20  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* \sdcc\as\mcs51\lklist.c: added boundary check before using
	dram[] array.

2002-09-18    <wiml@hhhh.org>

	* SDCClrange.h: exposed setFromRange() and setToRange()
	* mcs51/ralloc.c: fixed over-eager packRegsForSupport() and
	  packRegsForAccUse() (bug 542397)
	* mcs51/gen.c: MOVA() is now a function to avoid calling aopGet()
	  multiple times and emitting the fetch operations more than once
	  added aopGetUsesAcc() function to allow binary operators to
	  fetch their operands in the correct order; made genMinus() emit
	  compact code for X = LITERAL - Y 

2002-09-00  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>